# kaiten-sushi

./: .travis.yml  Cargo.toml  README.md  build_release.sh
ci/: before_deploy.sh
kaiten-sushi-0.1.0-x86_64-apple-darwin/: README.md  kaiten-sushi
src/: main.rs
