[package]
name = "kaiten-sushi"
version = "0.1.0"
authors = ["Masaki Murano <masaki.murano@livesense.co.jp>"]
license = "MIT OR Apache-2.0"
description = "CLI tool to shuffle input args"
readme = "README.md"
homepage = "https://github.com/Samemura/kaiten-sushi"
repository = "https://github.com/Samemura/kaiten-sushi"
keywords = ["cli", "shuffle", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
